the way autotest discovers rspec so the autotest executable won't
automatically load rspec anymore. This allows rspec to live side by side other
spec frameworks without always co-opting autotest through autotest's discovery
mechanism.

ALSO IMPORTANT: $rspec_options is gone. If you were using this for anything
(like your own runners), use Spec::Runner.options instead.

* Consider MinGW as valid RUBY_PLATFORM for --colour option. (patch from Luis Lavena). Closes #406.
* Added additional characters to be escaped in step strings (patch from Jake Cahoon). Closes #417.
* Disable color codes on STDOUT when STDOUT.tty? is false (patch from Tim Pope). Closes #413.
* mock(:null_object=>true) plays nice with HTML (patch from Gerrit Kaiser). Closes #230.
* a step definition with no block is treated as pending
* make sure consolidate_failures only grabs _spec files. Closes #369
* Simplifying ExampleGroupMethods#registration_backtrace. (From Wilson Bilkovich - http://metaclass.org/2008/6/7/calling-in-the-dark)
* Use 127.0.0.1 instead of localhost for drb (thanks Ola Bini)
* html story formatter correctly colors story/scenario red if step fails (Patch from Joseph Wilk). Closes #300
* plain text story formatter correctly colors story/scenario red if step fails (Patch from Joseph Wilk). Closes #439
* quiet deprecation warning on inflector - patch from RSL. Closes #430
* added autospec executable
* added configurable messages to simple_matcher
* should and should_not return true on success
* use hoe for build/release
* bye, bye translator
* autotest/rspec uses ruby command instead of spec command (no need for spec command unless loading directories)
* Avoid 'invalid option -O' in autotest (patch from Jonathan del Strother). Closes #486.
* Fix: Unimplemented step with new line throws error (patch from Ben Mabey). Closes #494.
* Only use color codes on tty; override for autospec (patch from Tim Pope). Closes #413.